--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0",
+        "laravel/framework": "^5.8",
+        "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "pomirleanu/gif-create": "^1.3",
         "spatie/laravel-sitemap": "^5.6",
         "tcg/voyager": "1.3.1",
         "veritrans/veritrans-php": "^1.2"
